tests/snapshots/assets__check_file@unit-grid-basic-cmt.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/grid/basic-cmt.typ
snapshot_kind: text
---
#table(
  columns: 2,
  [Name], [Age],
  [Hannes], [36],
)
#table( columns: 2,[Name], [Age], /*  */ [Hannes], [36],/*  */

)


#table(
  columns: (auto, 1fr, auto), // aaa
  gutter: 3pt,
  [Name], [Age], [Strength], // bbb
  [Hannes], [36], [Grace],
  [Irma], [50], [Resourcefulness],
  [Vikram], [49], [Perseverance], // ccc


)
