tests/snapshots/assets__check_file@unit-grid-basic.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/grid/basic.typ
---
#table(
  columns: (auto, 1fr, auto),
  gutter: 3pt,
  [Name], [Age], [Strength],
  [Hannes], [36], [Grace],
  [Irma], [50], [Resourcefulness],
  [Vikram], [49], [Perseverance],
)

#table(
  columns: 3,
  gutter: 3pt,
  [Name], [Age], [Strength],
  [Hannes], [36],
  [GraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGraceGrace],

  [Irma], [114514114514114514114514114514114514114514114514114514114514114514114514114514], [Resourcefulness],
  [Vikram], [49], [Perseverance],
)

#table(
  columns: 3,
  [Substance], [Subcritical °C], [Supercritical °C],
  [Hydrochloric Acid], [12.0], [92.1],
  [Sodium Myreth Sulfate], [16.6], [104],
  [Potassium Hydroxide], [24.7], [114.514],
)
