tests/snapshots/assets__check_file@unit-grid-cell.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/grid/cell.typ
---
#table(
  columns: 3,
  table.header(
    [Substance],
    [Subcritical °C],
    [Supercritical °C],
  ),
  [Hydrochloric Acid],
  [12.0], [92.1],
  [Sodium Myreth Sulfate],
  [16.6], [104],
  [Potassium Hydroxide],
  table.cell(colspan: 2)[24.7],
)


#import table: (
  cell,
  header,
)

#table(
  columns: 2,
  align: center,
  header(
    [*Trip progress*],
    [*Itinerary*],
  ),
  cell(
    align: right,
    fill: fuchsia.lighten(80%),
    [🚗],
  ),

  [Get in, folks!],
  [🚗],

  [Eat curbside hotdog],
  cell(align: left)[🌴🚗],

  cell(
    inset: 0.06em,
    text(1.62em)[🛖🌅🌊],
  ),
)
